--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<title>Movie Picker</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
-<body> 
+<script src="script.js"></script>
+</body>
+
 	<h1>Movie Picker</h1>
 	<button id="pickButton">Pick a Movie</button>
 	<p id="result"></p>
