--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html> 
-<html land="en">
-<head>
-	<meta charset="UTF -8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Movie Picker</title>
-	<link rel="stylesheet" href="styles.css">
-</head>
-<script src="script.js"></script>
-</body>
 
-	<h1>Movie Picker</h1>
-	<button id="pickButton">Pick a Movie</button>
-	<p id="result"></p>
-	<script src="script.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movie Picker</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Movie Picker</h1>
+    <button id="pickButton">Pick a Movie</button>
+    <p id="result"></p>
+    <script src="script.js"></script>
 </body>
 </html>
